<resources>
    <string name="app_name">My Application</string>
    <string name="nft">NFT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="register_user">Register User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="pref_key_night">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto">auto</string>
    <string name="pref_night_on">on</string>
    <string name="pref_night_off">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Light mode</string>

    <!-- Messages Preferences -->
    <string name="nickname_title">Your nickname</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="password_reset">Reset Password</string>
    <string name="photofy">Photofy</string>

    <string name="Files">Files</string>
    <string name="Images">Images</string>
    <string name="cover">cover</string>
    <string name="title_place_holder">title_place_holder</string>
    <string name="author_placeholder">Author PlaceHolder</string>
    <string name="Search" />
    <string name="images">Images</string>
    <string name="wallet">Wallet</string>
    <string name="search_posts">Search Posts!</string>
    <string name="Your_Liked_Posts" />
    <string name="Explore_Page" />
    <string name="liked_posts">Liked Posts</string>
    <string name="explore_page">Explore Page</string>
    <string name="your_dashboard">Your DashBoard</string>
    <string name="emaill">EMAIL</string>
    <string name="todo">TODO</string>

</resources>