<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:rotationY="180"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_nft"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="25dp"
        android:fontFamily="cursive"
        android:paddingVertical="20dp"
        android:rotationY="180"
        android:text="@string/nft"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="60sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20sp"
        android:hint="@string/email"
        android:rotationY="180"
        android:textSize="24sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:rotationY="180"
        android:textSize="24sp"
        android:inputType="text" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:rotationY="180"
        android:layout_marginHorizontal="50sp"
        android:layout_marginBottom="40sp"
        android:layout_marginTop="20sp"/>


    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle ="bold"
        android:rotationY="180"
        android:textSize="20sp"
        android:layout_marginHorizontal="50sp"/>

    <TextView
        android:id = "@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle ="bold"
        android:rotationY="180"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50sp"/>

</LinearLayout>