<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <TextView
      android:id="@+id/text_nft"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_margin="25dp"
      android:fontFamily="cursive"
      android:paddingVertical="20dp"
      android:text="@string/nft"
      android:textAlignment="center"
      android:textColor="#000"
      android:textSize="60sp"
      android:textStyle="bold"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <EditText
      android:id="@+id/full_name"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="180dp"
      android:ems="10"
      android:hint="@string/full_name"
      android:inputType="text"
      android:textSize="24sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_nft"
       />

  <EditText
      android:id="@+id/email"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="260dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="text"
      android:textSize="24sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/full_name"
      />

  <EditText
      android:id="@+id/password"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="340dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="text"
      android:textSize="24sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email"
      />

  <Button
      android:id="@+id/regist_user"
      android:layout_width="335dp"
      android:layout_height="73dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="480dp"
      android:layout_marginRight="40dp"
      android:text="@string/register_user"
      android:textAlignment="center"
      android:textSize="26sp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>